feat: barebones infinite scroll effect

--- a/src/app/features/speakers/pages/speaker-list-page/speaker-list-page.component.html
+++ b/src/app/features/speakers/pages/speaker-list-page/speaker-list-page.component.html
@@ -1,3 +1,4 @@
 @if (speakers$ | async; as speakers) {
     <app-speaker-list [speakers]="speakers"></app-speaker-list>
+    <button (click)="onNextPage()">Next page</button>
 }
