feat: barebones current page search

--- a/src/app/features/speakers/pages/speaker-list-page/speaker-list-page.component.html
+++ b/src/app/features/speakers/pages/speaker-list-page/speaker-list-page.component.html
@@ -1,3 +1,5 @@
+<input [formControl]="searchInput" placeholder="Search...">
+
 @if (speakers$ | async; as speakers) {
     <app-speaker-list [speakers]="speakers"></app-speaker-list>
     <button (click)="onNextPage()">Next page</button>
