--- a/src/app/features/speakers/pages/speaker-list-page/speaker-list-page.component.html
+++ b/src/app/features/speakers/pages/speaker-list-page/speaker-list-page.component.html
@@ -4,3 +4,5 @@
     <app-speaker-list [speakers]="speakers"></app-speaker-list>
     <button (click)="onNextPage()">Next page</button>
 }
+
+<router-outlet></router-outlet>
