refactor: pagination, filters in query params

--- a/src/app/features/speakers/components/speaker-list/speaker-list.component.html
+++ b/src/app/features/speakers/components/speaker-list/speaker-list.component.html
@@ -1,5 +1,5 @@
 @for (speaker of speakers; track speaker.id) {
-<a [routerLink]="['/speakers', speaker.id]">
+<a [routerLink]="['/speakers', speaker.id]" queryParamsHandling="merge">
   <div>
     {{speaker.id}} {{ speaker.name.title }} {{ speaker.name.first }} {{ speaker.name.last }}
   </div>
