--- a/src/app/core/dialogs/dialog/dialog.component.scss
+++ b/src/app/core/dialogs/dialog/dialog.component.scss
@@ -1,8 +1,10 @@
 .backdrop {
-    @apply bg-black bg-opacity-50;
+    @apply bg-black/20;
 }
 
 .dialog {
-    @apply bg-white fixed w-full h-full flex flex-col;
-    @apply md:w-1/2;
+    // Neccessary to override the default cdk style of the dialog
+    position: absolute !important; 
+    @apply bg-white h-[50%] w-full bottom-0;
+    @apply md:shadow-2xl md:inset-0 md:m-auto md:w-96 md:h-96;
 }
